# sltop

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  publish.yml
docs/superpowers/plans/: 2026-04-10-chain-array-jobs.md  2026-04-11-connect-to-node.md
docs/superpowers/specs/: 2026-04-10-chain-array-jobs-design.md  2026-04-11-connect-to-node-design.md
sltop/: __init__.py  sltop.py
